<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E252B"
    tools:context=".ui.gallery.MinMaxPourcentage">

    <EditText
        android:id="@+id/cour"
        android:layout_width="163dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:autofillHints="false"
        android:backgroundTint="#AE8C8C8C"
        android:inputType="none"
        android:text="@string/display"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/sellINP"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/plushaut"
        android:layout_width="163dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="204dp"
        android:autofillHints="false"
        android:background="@drawable/plushaut_draw"
        android:editable="false"
        android:inputType="none"
        android:text="@string/display"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/sellINP"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/perc"
        android:layout_width="163dp"
        android:layout_height="45dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="false"
        android:backgroundTint="#AE8C8C8C"
        android:inputType="none"
        android:text="@string/display"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="141dp"
        android:layout_height="35dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:text="@string/plusBas"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/sellINP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="RtlCompat,UnknownId" />

    <EditText
        android:id="@+id/plusbas"
        android:layout_width="163dp"
        android:layout_height="45dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="false"
        android:background="@drawable/plusbas_draw"
        android:editable="false"
        android:inputType="none"
        android:text="@string/display"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="60dp"
        android:gravity="center_vertical"
        android:text="@string/plusHaut"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buyINP"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:gravity="center_vertical"
        android:text="@string/prix"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buyINP"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="141dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:text="@string/pourcentage"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/sellINP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="RtlCompat,UnknownId" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="383dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clearBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:backgroundTint="#A6A6A6"
                android:text="@string/clear"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/parantBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/parant"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/powerBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/power"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/divisionBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="@drawable/button"
                android:text="@string/division"
                android:textColor="#000000"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/seven"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/eightBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/eight"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/nineBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/nine"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/multiBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="@drawable/button"
                android:text="@string/multiplication"
                android:textColor="#000000"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/four"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/fiveBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/five"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/sixBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/six"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/minusBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="@drawable/button"
                android:text="@string/minus"
                android:textColor="#000000"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/one"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/twoBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/two"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/threeBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/three"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/plusBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="@drawable/button"
                android:text="@string/plus"
                android:textColor="#000000"
                android:textSize="24sp"
                tools:ignore="UsingOnClickInXml" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="252dp">

            <Button
                android:id="@+id/signBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/sign"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/zeroBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/zero"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/commaBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/comma"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/equalBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="2dp"
                android:background="@drawable/button"
                android:text="@string/equal"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="24sp" />

        </TableRow>
    </TableLayout>

    <ImageButton
        android:id="@+id/keyboard2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="2dp"
        android:background="@drawable/button"
        android:contentDescription="@string/backspace"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toStartOf="@+id/backspace"
        app:srcCompat="@drawable/ic_keyboard_hide" />

    <ImageButton
        android:id="@+id/backspace"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_margin="2dp"
        android:background="@drawable/button"
        android:contentDescription="@string/backspace"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/backspace" />
</androidx.constraintlayout.widget.ConstraintLayout>